errorlogs/1516510004070-setup.py.txt
err:winediag:SECUR32_initNTLMSP ntlm_auth was not found or is outdated. Make sure that ntlm_auth >= 3.0.25 is in your path. Usually, you can find it in the winbind package of your distribution.
166 INFO: PyInstaller: 3.3.1
166 INFO: Python: 3.4.4
166 INFO: Platform: Windows-XP-5.1.2600-SP3
168 INFO: wrote Z:\p2e\setup.spec
175 INFO: UPX is not available.
175 INFO: Removing temporary files and cleaning cache in C:\users\root\Application Data\pyinstaller
219 INFO: Extending PYTHONPATH with paths
['Z:\\p2e\\workingdir\\1516510004070', 'Z:\\p2e']
220 INFO: checking Analysis
220 INFO: Building Analysis because out00-Analysis.toc is non existent
220 INFO: Initializing module dependency graph...
230 INFO: Initializing module graph hooks...
234 INFO: Analyzing base_library.zip ...
7184 INFO: Processing pre-find module path hook   distutils
10607 INFO: running Analysis out00-Analysis.toc
11118 INFO: Caching module hooks...
11132 INFO: Analyzing Z:\p2e\workingdir\1516510004070\setup.py

Syntax error in Z:\p2e\workingdir\1516510004070\setup.py
  File "Z:\p2e\workingdir\1516510004070\setup.py", line 30
     print "Please Install pythoncom and pyHook modules"
                                                       ^
 SyntaxError: Missing parentheses in call to 'print'

